force-app/main/default/objects/pse__Utilization_Setup__c/fields/pse__Calculate_Hours_For_Threshold_Values__c.field-meta.xml
<CustomField>
    <fullName>pse__Calculate_Hours_For_Threshold_Values__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, calculates the unheld resource request hours and weighted hours for the given threshold values associated with the opportunity success probability.</description>
    <inlineHelpText>When selected, calculates the unheld resource request hours and weighted hours for the given threshold values associated with the opportunity success probability.</inlineHelpText>
    <label>Calculate Hours For Threshold Values</label>
    <type>Checkbox</type>
</CustomField>