force-app/main/default/objects/pse__Utilization_Setup__c/fields/pse__Send_Failure_Email__c.field-meta.xml
<CustomField>
    <fullName>pse__Send_Failure_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If selected, an email is sent when a Utilization Run is unsuccessful.</description>
    <inlineHelpText>If selected, an email is sent when a Utilization Run is unsuccessful.</inlineHelpText>
    <label>Send Failure Email</label>
    <type>Checkbox</type>
</CustomField>