force-app/main/default/objects/pse__Utilization_Setup__c/fields/pse__Threshold_Value_1__c.field-meta.xml
<CustomField>
    <fullName>pse__Threshold_Value_1__c</fullName>
    <defaultValue>0.4</defaultValue>
    <description>Threshold value 1 for calculating the hours and weighted hours for unheld resource requests on the utilization result record.</description>
    <inlineHelpText>First threshold value used for calculating the hours and weighted hours for unheld resource requests on the utilization result record.</inlineHelpText>
    <label>Threshold Value 1</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>